<resources>
    <string name="app_name">Game Rack</string>

    <!-- Sample texts -->
    <string name="sample_game_name">Witcher 3</string>
    <string name="sample_platform_store">PC/Pirated</string>
    <string name="sample_publisher">CD Project Red</string>
    <string name="sample_release_year">2013</string>
    <string name="sample_developer">CD Project Red</string>
    <string name="sample_game_status">Completed</string>
    <string name="sample_igdb_ratings">94.3</string>
    <string name="sample_critic_ratings">94</string>
    <string name="sample_ign_ratings">9.5</string>
    <string name="sample_game_description">The Witcher: Wild Hunt is a story-driven, next-generation open world role-playing game set in a visually stunning fantasy universe full of meaningful choices and impactful consequences. In The Witcher you play as the professional monster hunter, Geralt of Rivia, tasked with finding a child of prophecy in a vast open world rich with merchant cities, viking pirate islands, dangerous mountain passes, and forgotten caverns to explore.</string>
    <string name="sample_release_date">18, May 2017</string>
    <string name="sample_genres_tags">Single-Player, Role-Playing (RPG), Action, Adventure, Open World</string>
    <string name="sample_gameplay_time">49.5 hrs</string>
    <string name="sample_content_rating">ESRB-6, PEGI-5</string>
    <string name="sample_game_expansion">Heart of Stone</string>

    <!-- Game Platforms -->
    <string name="platform_pc">PC</string>
    <string name="platform_xbox">XBox</string>
    <string name="platform_ps">PS</string>

    <!-- Game Stores -->
    <string name="store_default">Store</string>
    <string name="store_pirated">Pirated</string>
    <string name="store_steam">Steam</string>
    <string name="store_gog">GOG</string>
    <string name="store_uplay">UPlay</string>
    <string name="store_origin">Origin</string>

    <!-- Game Raters -->
    <string name="raters_igdb">IGDB</string>
    <string name="raters_critic">Critic</string>
    <string name="raters_ign">IGN</string>
    <string name="raters_steam">Steam</string>

    <!-- Game status -->
    <string name="status_currently_playing">Currently Playing</string>
    <string name="status_completed">Completed</string>
    <string name="status_to_be_played">To Be Played</string>
    <string name="status_tbp">TBP</string>

    <!-- Other Texts -->
    <string name="txt_ratings">Ratings</string>
    <string name="txt_description">Description</string>
    <string name="txt_developer">Developer</string>
    <string name="txt_release_date">Release Date</string>
    <string name="txt_platform_store">Platform and Store</string>
    <string name="txt_status">Status</string>
    <string name="txt_genres_tags">Genres and Tags</string>
    <string name="txt_gameplay_time">Gameplay Time</string>
    <string name="txt_content_rating">Content Rating</string>
    <string name="txt_external_links">External Links</string>
    <string name="txt_official_site">Official Site</string>
    <string name="txt_steam">Steam</string>
    <string name="txt_twitch">Twitch</string>
    <string name="txt_wikia">Wikia</string>
    <string name="txt_played_all">Played all</string>

    <!-- Messages -->
    <string name="msg_add_new_game">Tap + to add games</string>
    <string name="msg_go_online_to_search">Go online to search</string>
    <string name="msg_no_internet_available">No Internet available</string>
    <string name="msg_no_game_found">No game found</string>
    <string name="msg_no_expansions_found">No expansions found for this game</string>
    <string name="msg_added_to_favorites">Added to favorites</string>
    <string name="msg_removed_from_favorites">Removed from favorites</string>
    <string name="msg_will_be_added_to_library">Will be added to library shortly</string>
    <string name="msg_added_to_library">Added to library</string>
    <string name="msg_removing_game_from_library">Removing game from library</string>
    <string name="msg_removed_from_library">Removed from library</string>

    <!-- View Texts -->
    <string name="button_add">Add</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_clear">Clear</string>
    <string name="button_save">Save</string>
    <string name="hint_search">Type a game name</string>

    <!-- Menu actions -->
    <string name="action_settings">Settings</string>
    <string name="action_isFavorite">Favorite</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove_game">Remove</string>
    <string name="action_clear_history">Clear History</string>

    <string name="title_activity_fullscreen_image">FullscreenImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>

    <string name="prefs_category_backup_restore">Backup/Restore</string>
    <string name="prefs_title_auto_backup">Auto Backup</string>
    <string name="prefs_summary_auto_backup">Weekly backup of your games</string>
    <string name="prefs_key_auto_backup">Auto Backup</string>
    <string name="prefs_title_backup">Backup</string>
    <string name="prefs_summary_backup">Backup your games</string>
    <string name="prefs_key_backup">Backup</string>
    <string name="prefs_default_value_backup">backup.json</string>
    <string name="prefs_title_restore">Restore</string>
    <string name="prefs_summary_restore">Restore your games</string>
    <string name="prefs_key_restore">Restore</string>


    <string name="prefs_category_about">About</string>
    <string name="prefs_title_app_developer">Saiyan Studio</string>
    <string name="prefs_summary_app_developer">Developer</string>
    <string name="prefs_title_app_version">Version</string>
    <string name="prefs_summary_app_version">1.0</string>
    <string name="prefs_key_remove_ads">Remove Ads</string>
    <string name="prefs_title_remove_ads">Remove Ads</string>
    <string name="prefs_key_rate_app">Rate the app</string>
    <string name="prefs_title_rate_app">Rate the app</string>
    <string name="prefs_title_data_provider">IGDB</string>
    <string name="prefs_summary_data_provider">Data Provider</string>

    <string name="prefs_title_send_feedback">Send Feedback Mail</string>
    <string name="prefs_summary_send_feedback">Got any queries? I am happy to help!</string>
    <string name="prefs_key_send_feedback">Send Feedback Mail</string>

    <string name="choose_email_client">Choose email client</string>

    <!-- AdMob ad unit IDs -->
    <string name="ad_banner_ad_unit_id">ca-app-pub-9853517059952914/8369466963</string>
    <string name="ad_interstitial_ad_unit_id">ca-app-pub-9853517059952914/2975338358</string>

</resources>
