<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/marginTop_list_row_card"
    android:layout_marginStart="@dimen/marginStart_list_row_card"
    android:layout_marginLeft="@dimen/marginStart_list_row_card"
    android:layout_marginEnd="@dimen/marginEnd_list_row_card"
    android:layout_marginRight="@dimen/marginEnd_list_row_card"
    android:layout_marginBottom="@dimen/marginBottom_list_row_card"
    android:foreground="?android:attr/selectableItemBackground"
    android:focusable="true"
    android:clickable="true">

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/width_list_row_image_view"
        android:layout_height="0dp"
        android:minHeight="@dimen/height_list_row_image_view"
        android:background="@color/background_list_row_image_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintBottom_toBottomOf="parent"/>

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/width_list_row_image_view"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/height_list_row_image_view"
        android:id="@+id/cardView_game"
        android:src="@drawable/ic_image_grey_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/height_list_row_image_view"
            android:id="@+id/imageView_game"
            android:src="@drawable/ic_image_grey_24dp"
            android:scaleType="centerInside"/>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView_game_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_list_row_text_view"
        android:layout_marginTop="@dimen/marginTop_list_row_text_view"
        android:layout_marginEnd="@dimen/marginEnd_list_row_text_view"
        android:text="@string/sample_game_name"
        android:textColor="@color/text_color_list_row_game_name"
        android:textSize="@dimen/textSize_list_row_game_name"
        app:layout_constraintStart_toEndOf="@+id/cardView_game"
        app:layout_constraintEnd_toEndOf="@+id/imageView_game_isFavorite"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_game_platform_store"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/marginEnd_list_row_text_view"
        android:layout_marginStart="@dimen/marginStart_list_row_text_view"
        android:layout_marginTop="@dimen/marginTop_list_row_text_view"
        android:text="@string/sample_platform_store"
        android:textColor="@color/text_color_list_row_game_platform_store"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView_game"
        app:layout_constraintTop_toBottomOf="@+id/textView_game_name"
        card_view:layout_constraintBottom_toTopOf="@+id/textView_game_status" />

    <TextView
        android:id="@+id/textView_game_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_list_row_text_view"
        android:layout_marginTop="@dimen/marginTop_list_row_text_view"
        android:layout_marginEnd="@dimen/marginEnd_list_row_text_view"
        android:layout_marginBottom="@dimen/marginBottom_list_row_text_view"
        android:text="@string/sample_game_status"
        android:textColor="@color/text_color_list_row_game_status"
        app:layout_constraintStart_toEndOf="@+id/cardView_game"
        app:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_game_platform_store" />

    <ImageView
        android:id="@+id/imageView_game_isFavorite"
        android:layout_width="@dimen/width_list_row_is_favorite"
        android:layout_height="@dimen/height_list_row_is_favorite"
        android:src="@drawable/ic_star_white_24dp"
        android:layout_marginTop="@dimen/marginTop_list_row_text_view"
        android:layout_marginEnd="@dimen/marginEnd_list_row_is_favorite"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/layout_game_currently_playing" />

    <LinearLayout
        android:layout_width="@dimen/width_list_row_currently_playing_layout"
        android:layout_height="0dp"
        android:id="@+id/layout_game_currently_playing"
        android:orientation="vertical"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>